# kanban_drag_drop

be/: Makefile  env.yaml  go.mod  go.sum  main.go  sqlc.yaml
be/appstate/: state.go
be/db/migrations/: 000001_kanban.down.sql  000001_kanban.up.sql
be/db/query/: task_query.sql
be/db/sqlc/: kanban.go  kanban_test.go  models.go  task_query.sql.go
be/service/: client.go  kanban_service.go  kanban_service_test.go  server.go
fe/: CMakeLists.txt  Card.qml  Kanban.qml  Main.qml  config.cpp  config.h  datamodel.cpp  datamodel.h  datamodel_rep.cpp  datamodel_rep.h  datatype.h  main.cpp  settings.ini
